<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/btc_jpy_item_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btc_jpy_item_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btc_jpy_item_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/btc_jpy_item_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2015-04-01 18:16:01.739990"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_action_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/label_trade_action"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_action_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bid"
                        android:textColor="@android:color/black"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_trade_amount"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_amount_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.1089"
                        android:textColor="@android:color/black"
                        android:textSize="8pt"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="170dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_trade_price"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/btc_jpy_item_trade_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30001"
                        android:textColor="@android:color/black"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>
</layout>